# 23202-khaplak-oop-cpp

task-0/: CMakeLists.txt  main.cpp  test1.h
task-0/Google_tests/: CMakeLists.txt  FileReader_test.cpp  FileWriter_test.cpp  WordStatistics_test.cpp
task-0/src/: FileReader.h  FileWriter.cpp  FileWriter.h  TextParser.cpp  TextParser.h  WordStatistics.cpp  WordStatistics.h  main.cpp  test1.cpp
task-0/test/: FileReader_test.cpp  FileWriter_test.cpp  TextParser_test.cpp  WordStatistics_test.cpp
task-1/: CMakeLists.txt
task-1/Google_tests/: BitArray_test.cpp  CMakeLists.txt
task-1/src/: BitArray.cpp  BitArray.h  main.cpp
task-1/test/: BitArray_test.cpp
task-2/: CMakeLists.txt
task-2/Google_tests/: CMakeLists.txt  GameOfLife_test.cpp
task-2/src/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  GameEngine.cpp  GameEngine.h  GameOfLifeParser.cpp  GameOfLifeParser.h  Interface.cpp  Interface.h  LifeGame.cpp  LifeGame.h  main.cpp
